--- a/src/grid.scss
+++ b/src/grid.scss
@@ -1,23 +1,3 @@
-/*!
- * dot-grid v1.0.0
- * A modern, flexible 12-column CSS Grid system
- *
- * Features:
- * - Container queries for responsive layouts
- * - Fluid/automatic layout utilities
- * - Subgrid support
- * - CSS custom properties for easy customization
- * - Cascade layers for better specificity control
- *
- * (c) 2024 Jean Loberg
- * Released under the MIT License
- * https://github.com/lobergdesign/dot-grid
- */
-
-// ========================================
-// Import all modules
-// ========================================
-
 @use 'variables';
 @use 'base';
 @use 'utilities';
@@ -33,7 +13,7 @@
 // :root {
 //   --grid-gap: 1.5rem;
 //   --grid-columns: 16;
-//   --grid-wrap-max-width: 1400px;
+//   --grid-w-max-width: 1400px;
 // }
 
 // ========================================
@@ -43,16 +23,16 @@
 /*
 
 BASIC GRID:
-<div class="wrap">
-  <div class="row">
-    <div class="col-12 col-md-6 col-lg-4">Column</div>
-    <div class="col-12 col-md-6 col-lg-4">Column</div>
-    <div class="col-12 col-md-6 col-lg-4">Column</div>
+<div class="grid-w">
+  <div class="grid-r">
+    <div class="grid-c-12 grid-c-md-6 grid-c-lg-4">Column</div>
+    <div class="grid-c-12 grid-c-md-6 grid-c-lg-4">Column</div>
+    <div class="grid-c-12 grid-c-md-6 grid-c-lg-4">Column</div>
   </div>
 </div>
 
 FLUID GRID (auto-responsive):
-<div class="wrap">
+<div class="grid-w">
   <div class="grid-auto-fit">
     <div>Card 1</div>
     <div>Card 2</div>
@@ -61,23 +41,23 @@ FLUID GRID (auto-responsive):
 </div>
 
 SUBGRID:
-<div class="row">
-  <div class="col-12 row-subgrid">
-    <div class="col-4">Nested 1</div>
-    <div class="col-4">Nested 2</div>
-    <div class="col-4">Nested 3</div>
+<div class="grid-r">
+  <div class="grid-c-12 grid-r-subgrid">
+    <div class="grid-c-4">Nested 1</div>
+    <div class="grid-c-4">Nested 2</div>
+    <div class="grid-c-4">Nested 3</div>
   </div>
 </div>
 
-CUSTOM GAP:
-<div class="row gap-lg">
-  <div class="col-6">Large gap</div>
-  <div class="col-6">Large gap</div>
+NO GAP:
+<div class="grid-r no-gap">
+  <div class="grid-c-6">No gap</div>
+  <div class="grid-c-6">No gap</div>
 </div>
 
 PLACEMENT:
-<div class="row">
-  <div class="col-6 place-c-c">Centered content</div>
+<div class="grid-r">
+  <div class="grid-c-6 place-c-c">Centered content</div>
 </div>
 
 */
